--- a/plugin.ini
+++ b/plugin.ini
@@ -1,9 +1,10 @@
 [info]
 name="BIO"
-author="Jairo A. Melo F."
+author="Pop Up Archive"
+adapted by = "Jairo A. Melo F."
 description="Creates a new element set based on BIO vocabulary for OMEKA Classic."
 link="hhttps://github.com/jairomelo/BIO-Element-Set/"
 omeka_minimum_version="1.0"
 omeka_tested_up_to="2.5"
-version="beta"
-tags="metadata, pbcore"
+version="0.9"
+tags="metadata, bio"
